[package]
name = "bridge"
version = "0.1.0"
authors = ["rupansh <rupanshsekar@hotmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
serde-json-wasm = { version = "0.4" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit.git", rev = "4c9ece9fad59eca10dbf22022f874f11c04b4ce3" }
ed25519-compact = { version = "1.0.11", default-features = false }
sha2 = { version = "0.9", default-features = false }
borsh = {  version = "0.9", default-features = false, features = ["const-generics"] }
serde-big-array = { version = "0.3", features = ["const-generics"] }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
ed25519-dalek = { version = "1", features = ["std", "rand"] }
rand_core = { version = "0.5", features = ["getrandom"] }
